--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ LOG_OUTPUT=dev
 
 # Database
 TYPEORM_HOST=localhost
-TYPEORM_USERNAME=lebron
-TYPEORM_PASSWORD=james
+TYPEORM_USERNAME=kelvin
+TYPEORM_PASSWORD=chan
 TYPEORM_DATABASE=cars_db
 TYPEORM_CONNECTION=mysql
 TYPEORM_PORT=3306
